fixed overflow and vertical horizontal switch

--- a/www/style.css
+++ b/www/style.css
@@ -36,19 +36,95 @@ h1, h2, h3, h4, h5, h6 {
 
 /* BOXES */
 
+@media (max-width: 1400px) {
+  #grid_container {
+    display: grid;
+    grid-template-rows: repeat(92, 12px);
+    grid-template-columns: repeat(53, 12px);
+    grid-gap: 3.5px;
+    grid-auto-flow: row;
+    max-width: 100%;
+    overflow-x: auto;
+  }
+  
+  .tall_label {
+    display: block ;
+  }
+  
+  .wide_label {
+    display: none;
+  }
+  
+  .grid_label_week {
+    width: 12px;
+    height: 12px;
+    background-color: #00000000;
+    border: 1.5px solid #00000000;
+    border-radius: 2.5px;
+    font-size: 8px;
+    line-height: 12px;
+    text-align: center;
+  }
+  
+  .grid_label_year {
+    width: 12px;
+    height: 12px;
+    background-color: #00000000;
+    border: 1.5px solid #00000000;
+    border-radius: 2.5px;
+    font-size: 8px;
+    line-height: 8px;
+    text-align: right;
+  }
+}
+
+@media (min-width: 1400px) {
+  #grid_container {
+    display: grid;
+    grid-template-columns: repeat(92, 12px);
+    grid-template-rows: repeat(53, 12px);
+    grid-gap: 3.5px;
+    grid-auto-flow: column;
+    max-width: 100%;
+    overflow-x: auto;
+  }
+  
+  .tall_label {
+    display: none ;
+  }
+  
+  .wide_label {
+    display: block;
+  }
+  
+  .grid_label_week {
+    width: 12px;
+    height: 12px;
+    background-color: #00000000;
+    border: 1.5px solid #00000000;
+    border-radius: 2.5px;
+    font-size: 8px;
+    line-height: 8px;
+    text-align: right;
+  }
+  
+  .grid_label_year {
+    width: 12px;
+    height: 12px;
+    background-color: #00000000;
+    border: 1.5px solid #00000000;
+    border-radius: 2.5px;
+    font-size: 8px;
+    line-height: 12px;
+    text-align: center;
+  }
+}
+
 .grid_parent {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-}
-
-#grid_container {
-  display: grid;
-  grid-template-columns: repeat(92, 12px);
-  grid-template-rows: repeat(53, 12px);
-  grid-gap: 3.5px;
-  grid-auto-flow: column;
 }
 
 .grid_item {
@@ -60,32 +136,6 @@ h1, h2, h3, h4, h5, h6 {
   transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
-.filled:hover {
-  cursor: pointer;
-}
-
-.grid_label_week {
-  width: 12px;
-  height: 12px;
-  background-color: #00000000;
-  border: 1.5px solid #00000000;
-  border-radius: 2.5px;
-  font-size: 8px;
-  line-height: 8px;
-  text-align: right;
-}
-
-.grid_label_year {
-  width: 12px;
-  height: 12px;
-  background-color: #00000000;
-  border: 1.5px solid #00000000;
-  border-radius: 2.5px;
-  font-size: 8px;
-  line-height: 12px;
-  text-align: center;
-}
-
 .grid_none {
   width: 12px;
   height: 12px;
@@ -94,6 +144,26 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 2.5px;
   font-size: 8px;
   line-height: 8px;
+}
+
+.filled:hover {
+  cursor: pointer;
+}
+
+/* AXIS LABELS */
+
+.x_label {
+  margin: 0 0 6px 0;
+  padding: 40px 0 0 0;
+  font-size: 11px;
+}
+
+.y_label {
+  writing-mode: vertical-rl;
+  transform: scale(-1);
+  margin: 0 0 0 6px;
+  padding: 0;
+  font-size: 11px;
 }
 
 /* COLORS */
